--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <div class="col-4 text-center">
           <button type="button" id="btnCreate" onclick="ajouterRecette()">Ajouter la recette</button>
           <button id="btnUpdate" style="display : none;" onclick="updateRecette()">Enregistrer les modifications</button>
+          <button id="btnCancel" style="display : none;" onclick="updateRecette()">Annuler les modifications</button>
         </div>
       </div>
     </form>
