--- a/index.html
+++ b/index.html
@@ -9,101 +9,24 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <title>TP CRUD Receipes</title>
 </head>
+<header class="text-center container">
+<a href="index.html"><img src="/assets/img/logo.png" alt="" height="200" width="200"></a>
+</header>
 <body>
-  <div class="container-fluid">
-    <h1>Recettes de cuisine</h1>
-    
+  <section class="container-fluid my-3">
+    <div class="text-center container">
+    <h1>Recettes de jour</h1>
+    </div>
     <!-- TABLEAU HTML SE GENERE ICI -->
-    <div id="affichage">
+    <div id="affichage" class="album py-5 bg-light">
     </div>
 
     <!-- FORMULAIRE -->
-<!--     <form class="mt-2" action="http://localhost:3000/receipes" method="post">
-        <div class="row mt-2">
-            <div class="col-2 my-auto">
-                Nom de la recette
-            </div>
-            <div class="col-3 my-auto">
-                <input type="text" class="form-control" id="nomRecette">         
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-2 my-auto">
-                Nombre de part
-            </div>
-            <div class="col-3 my-auto">
-                <input class="form-control" type="text" id="nbPart">
-            </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-2 my-auto">
-              Description
-          </div>
-          <div class="col-3 my-auto">
-              <input class="form-control" type="text" id="description">
-          </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-2 my-auto">
-              Lien
-          </div>
-          <div class="col-3 my-auto">
-              <input class="form-control" type="text" id="link">
-          </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-2 my-auto">
-            Ingredients
-          </div>
-          <div class="col-3 my-auto">
-            <input class="form-control" type="text" id="nomI">
-          </div>
-          <div class="col-3 my-auto">
-            <input class="form-control" type="text" id="quantity">
-          </div>
-        </div>
-        
-        <div class="row mt-2">
-          <div class="col-2 my-auto">
-            Unité
-          </div>
-          <div class="form-check form-check-inline col-1 my-auto">
-            <input class="form-check-input" type="radio" name="unit" id="inlineRadio1" value="cl">
-            <label class="form-check-label" for="inlineRadio1">cl</label>
-          </div>
-          <div class="form-check form-check-inline col-1 my-auto">
-            <input class="form-check-input" type="radio" name="unit" id="inlineRadio2" value="ml">
-            <label class="form-check-label" for="inlineRadio2">ml</label>
-          </div>
-          <div class="form-check form-check-inline col-1 my-auto">
-            <input class="form-check-input" type="radio" name="unit" id="inlineRadio3" value="l">
-            <label class="form-check-label" for="inlineRadio3">l</label>
-          </div>
-          <div class="form-check form-check-inline col-1 my-auto">
-            <input class="form-check-input" type="radio" name="unit" id="inlineRadio4" value="g">
-            <label class="form-check-label" for="inlineRadio4">g</label>
-          </div>
-          <div class="form-check form-check-inline col-1 my-auto">
-            <input class="form-check-input" type="radio" name="unit" id="inlineRadio5" value="mg">
-            <label class="form-check-label" for="inlineRadio5">mg</label>
-          </div>
-          <div class="form-check form-check-inline col-1 my-auto">
-            <input class="form-check-input" type="radio" name="unit" id="inlineRadio6" value="kg">
-            <label class="form-check-label" for="inlineRadio6">kg</label>
-          </div>
-        </div>
-   
-        <div class="row mt-2">
-            <div class="col-4 text-center">
-                <input class="button" type="button" value="Ajouter la recette" onclick="ajouterRecette()">
-            </div>
-        </div>
-    </form> -->
-
     <form class="mt-2" action="http://localhost:3000/receipes" id="formRecette" method="post">
       <!-- <div class="row mt-2">
       <label for="nomRecette">Nom de la recette :</label>
@@ -146,6 +69,8 @@
         </div>
       </div>
     </form>
+  </section> 
+
 </body>
 <script src="index.js"></script>
 </html>
